--- a/scss/button.scss
+++ b/scss/button.scss
@@ -62,3 +62,14 @@
 .btn-left{
 	text-align: left;
 }
+
+.close-tab-panel {
+	position: relative;
+	width: 14px;
+	height: 14px;
+	cursor: pointer;
+
+	.og-close {
+		top: 0;
+	}
+}
