--- a/scss/media-request.scss
+++ b/scss/media-request.scss
@@ -112,6 +112,34 @@
 	  	}
 		}
 	}
+
+	.og-expander-inner {
+		.og-fullimg {
+			display: none;
+		}
+
+		.og-details {
+			width: 100%;
+		}
+	}
+
+	.nav-team-inner {
+		.nav-tab-header {
+			display: none;
+		}
+
+		.nav-tab-autor {
+			p {
+				font-size: 14px;
+			}
+		}
+
+		.nav-tab-profession {
+			p {
+				font-size: 12px;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 650px) {
@@ -123,15 +151,6 @@
 	.og-details {
 		float: none;
 		width: 100%;
-	}
-
-	.thumbnail-grid {
-		.og-grid {
-
-	  	li {
-	    	width: 100%;
-	  	}
-		}
 	}
 }
 
