--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,16 +1,13 @@
 .form-control {
   padding: 20px;
   font-size: 15px;
+  color: $dark-secondary-color;
   line-height: inherit;
-  color: $white;
-  background-color: #131a1d;
-  border: 1px solid $white;
+  border: 1px solid $dark-secondary-color;
   border-radius: 0;
 
   &:focus {
-    color: $white;
-    background-color: inherit;
-    border-color: $white;
+    border-color: $yellow-primary;
   }
 }
 
