--- a/scss/media-request.scss
+++ b/scss/media-request.scss
@@ -123,22 +123,8 @@
 		}
 	}
 
-	.nav-team-inner {
-		.nav-tab-header {
-			display: none;
-		}
-
-		.nav-tab-autor {
-			p {
-				font-size: 14px;
-			}
-		}
-
-		.nav-tab-profession {
-			p {
-				font-size: 12px;
-			}
-		}
+	.nav-tabs {
+		display: none;
 	}
 }
 
