--- a/scss/header.scss
+++ b/scss/header.scss
@@ -117,3 +117,7 @@ button:focus {
 .branding-title {
 	margin: 0 0 4.761904761904762%;
 }
+
+.bg-dark-green{
+	background-color: rgba(19, 19, 22, .3);
+}
