--- a/scss/section.scss
+++ b/scss/section.scss
@@ -11,11 +11,7 @@
 	background-color: #11343a;
 }
 
-.section-header{
-	background-color: rgba(19, 19, 22, .3);
-}
-
-.section-bottom{
+.section-body{
 	padding: 50px 0 0;
 }
 
